# XxStocks

./: .gitignore  README.md  bert_ts_notebook.py  data_preparation.py  eda.py  models_playground.py  pyproject.toml  text_encoder_notebook.py  text_encoder_script.py  text_feature_extraction.py  text_feature_extraction_script.py  vae_notebook.py
dataset/: bert_ts_loader.py  loader.py  preprocessing.py  text_dataset.py
llm_workflows/: text_feature_extraction.py
models/: binary_fincast.py  evaluation.py  fincast.py  lstm.py  mamba.py  sarimax.py  text_encoder.py  vae.py
text_processing/: data_preparation.py  text_for_encoder.py
