[project]
name = "xxstocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cleantext>=1.1.4",
    "ipywidgets>=8.1.8",
    "marimo>=0.20.3",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyzmq>=27.1.0",
    "ruff>=0.15.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "ty>=0.0.23",
    "umap-learn>=0.5.11",
    "xdk>=0.9.0",
]

[tool.marimo.runtime]
output_max_bytes = 100_000_000
